unpackaged/objects/LoyaltyProgram__c.object
<CustomObject>
  <description>Used to track programs that an Account is participating at. Example could be a loyalty Program. 

Note that the API label says LoyaltyProgram since that was the first design of it and intention for it - but has been relabeled to have a broader meaning and sense since whereas types of programs has arised as a need.</description>
  <fields>
    <fullName>AllowMultipleMembersPerAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://dentsplysirona.lightning.force.com/lightning/r/Project__c/a1T6M0000050T5yUAE/view</description>
    <inlineHelpText>Check to allow multiple program member records with the same account.</inlineHelpText>
    <label>Allow Multiple Members per Account</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>AllowMultipleMembersPerContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://dentsplysirona.lightning.force.com/lightning/r/Project__c/a1T6M0000050T5yUAE/view</description>
    <inlineHelpText>Check to allow multiple program members with the same Contact</inlineHelpText>
    <label>Allow Multiple Members per Contact</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>AllowProgramMembers__c</fullName>
    <defaultValue>true</defaultValue>
    <description>https://dentsplysirona.lightning.force.com/lightning/r/Project__c/a1T6M0000050T5yUAE/view</description>
    <inlineHelpText>Allow users to add program members to this program</inlineHelpText>
    <label>Allow Program Members</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>ContactRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TFUS-000002932</description>
    <inlineHelpText>Check this field to require a Contact during program member registration</inlineHelpText>
    <label>Contact Required</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Country__c</fullName>
    <description>https://dentsplysirona.lightning.force.com/lightning/r/Project__c/a1T6M0000050T5yUAE/view</description>
    <label>Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>Country_Code_2_digit</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>EndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Notifications__c</fullName>
    <description>TFUS-000002384. Controls whether a chatter post will be created that notifies users in the parent account territory once a program registration has been activated.</description>
    <label>Notifications</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Send Chatter Notification to Territory Users</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>ProgramDescription__c</fullName>
    <description>210318: TFUS-000002864 &amp; TFUS-000002865
This field is used to show guidance on the account program member page.</description>
    <label>Program Description</label>
    <length>32768</length>
    <type>Html</type>
  </fields>
  <fields>
    <fullName>StartDate__c</fullName>
    <label>Start date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Active</fullName>
        </value>
        <value>
          <fullName>Inactive</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Subtype__c</fullName>
    <description>https://dentsplysirona.lightning.force.com/lightning/r/Project__c/a1T6M0000050T5yUAE/view</description>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Type__c</controllingField>
      <restricted>true</restricted>
      <valueSetName>Account_Program_Subtype</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>Account_Program_Type</valueSetName>
    </valueSet>
  </fields>
  <label>Account Program</label>
  <listViews>
    <fullName>All_Account_Programs1</fullName>
    <columns>NAME</columns>
    <columns>AllowMultipleMembersPerAccount__c</columns>
    <columns>AllowMultipleMembersPerContact__c</columns>
    <columns>AllowProgramMembers__c</columns>
    <columns>ContactRequired__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Status__c</field>
      <operation>equals</operation>
      <value>Active</value>
    </filters>
    <label>All Account Programs</label>
  </listViews>
  <nameField>
    <label>Account Program Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Account Programs</pluralLabel>
  <sharingModel>Private</sharingModel>
</CustomObject>